# console-input

./: Cargo.toml  Readme.md
examples/: balance.rs
src/: _lib.rs  stdin.rs
